Extend benchmark runners